# chronos-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: router.py
app/core/: config.py
app/db/: base_class.py
app/models/: user.py
docs/: chronos_stratege.md
