[tool.poetry]
name = "chronos-stratege"
version = "0.1.0"
description = "LLM 기반 캘린더 어시스턴트"
authors = ["Chanyoung Lee <cyl0504@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.6"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
celery = "^5.3.0"
redis = "^4.5.0"
boto3 = "^1.26.0"
openai = "^0.27.0"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
google-auth-httplib2 = "^0.1.0"
google-api-python-client = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi-line-output = 3 